--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h4>
       Zucchini 
     </h4>
-    <a href= "www.poptropica.com"></a>
+    <a href= "www.poptropica.com"> Poptropica</a>
     
     
   </body>
