--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       Zucchini 
     </h4>
     <a href= "www.poptropica.com"> Poptropica</a>
-    
+    <img src= "https://www.poptropica.com/brain/track.php?campaign=ABTest_IndexPageHeroImage&event=ABTest_choice&cluster=Home&scene=Home&choice=Poptropica_HP.jpg&r=%2Fimages%2FPoptropica_HP.jpg"
     
   </body>
   
