🍢👜 Checkpoint ./index.html:10732239/318

--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
    
 <ul>
 <li> If you like pina coladas and getting caught in the rain</li>
-  <li> I</li>
-    </ul>
+  <li> If you're not into yoga, and you have half a brain</li>
+  <li> If you like making love at midnights in the dunes of the cape, I'm the love that you look for, write to me and escape</li>
   
+    </ul>
+    <h2> Basic HTML Table </h2>
+    <table>
+      <tr></tr>
+    </table>
   </body>
   
   
