🌓🗼 Checkpoint ./index.html:10732239/515

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
   <li> If you like making love at midnights in the dunes of the cape, I'm the love that you look for, write to me and escape</li>
   
     </ul>
-    <h2> Basic HTML Table </h2>
+    <h2> Hit List from Heaven </h2>
     <table>
-      <tr></tr>
+      <tr> 
+        <th>Name</th>
+        <th>Why They Gotta Go</th>
+      </tr>
+    <td>Donald Trump</td>
+    <td>Have you seen the news?</td>
+  
     </table>
   </body>
   
